# advent-code-2022

./: .gitignore  pyproject.toml
day_1/: main.py
day_2/: main.py  readme.md
day_3/: main.py
day_4/: main.py
